--- a/mystyle.css
+++ b/mystyle.css
@@ -16,10 +16,22 @@
     display: table;
     clear: both;
 }
+.logo {
+    width: 90px;
+    height: auto;
+    overflow: hidden;
+    align-items: left;
+    display: inline-block;
+    position: fixed;
+}
 body {
     background-color: #CB300F;
 }
 h1 {
+    color: #FBFCFC; 
+    font-family: cambria, arial;
+}
+h2 {
     color: #FBFCFC; 
     font-family: cambria, arial;
 }
@@ -30,4 +42,17 @@ h4 {
 }
 a { 
     text-decoration: none; 
+}
+#footer {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    height: 3rem; 
+    display: block;
+    background-color: #D74323;
+    box-sizing: border-box;
+    float: left;
+    color: #FBFCFC;
+    line-height: 1.6;
+    padding: 2px;
 }
