--- a/mystyle.css
+++ b/mystyle.css
@@ -16,6 +16,11 @@
     display: table;
     clear: both;
 }
+@media only screen and (max-width: 768px) {
+    .logo {
+        visibility: hidden;
+    }
+}
 .logo {
     width: 90px;
     height: auto;
