--- a/mystyle.css
+++ b/mystyle.css
@@ -52,7 +52,7 @@ a {
     position: absolute;
     bottom: 20px;
     width: 100%;
-    height: 3rem; 
+    /*height: 3rem; */
     display: block;
     background-color: #D74323;
     box-sizing: border-box;
