--- a/mystyle.css
+++ b/mystyle.css
@@ -50,7 +50,7 @@ a {
 }
 #footer {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
     width: 100%;
     /*height: 3rem; */
     display: block;
